[tool.poetry]
name = "thankyou"
version = "0.0.2"
description = "Python module to print Thank You in every known language."
authors = ["Mario Hernandez <mariofix@pm.me>"]
readme = "README.md"
repository = "https://github.com/mariofix/thankyou"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
